# opensclconfig-code

./: ChangeLog  LibOpenSCL.sln  LibOpenSCL.userprefs  OpenSCLConfigurator_Console.userprefs  OpenSCLTools.sln  Packages.mdproj  Paquetes.mdproj  openscltools.sln  openscltools.userprefs
LibOpenSCL/: AssemblyInfo.cs  Attributes.cs  CDCTypes.cs  CommonLogicalNode.cs  ConversionObject.cs  DataSet.cs  DataTypes.cs  Enums.cs  ErrorsManagement.cs  IED.cs  INSTALLATION.txt  LN0.cs  LNTypes.cs  LibOpenSCL.csproj  LibOpenSCL.pidb  LibOpenSCL.sln  LogicalNode.cs  Object.cs  ObjectManagement.cs  Private.cs  RegularExpression.cs  SCL.cs  Utility.cs  ValidatingSCL.cs  XMLSCL.cs  tAbstractConductingEquipment.cs  tAbstractDataAttribute.cs  tAccessControl.cs  tAccessPoint.cs  tAddress.cs  tAnyContentFromOtherNamespace.cs  tAnyLN.cs  tAssociation.cs  tBDA.cs  (+92 more)
cplusplus/libopenscl/libopenscl/: Makefile.am  SCL-pskel.cc  SCL-pskel.h  SCL.cc  SCL.h  SCL_BaseSimpleTypes-pskel.cc  SCL_BaseSimpleTypes-pskel.h  SCL_BaseSimpleTypes.cc  SCL_BaseSimpleTypes.h  SCL_BaseTypes-pskel.cc  SCL_BaseTypes-pskel.h  SCL_BaseTypes.cc  SCL_BaseTypes.h  SCL_Communication-pskel.cc  SCL_Communication-pskel.h  SCL_Communication.cc  SCL_Communication.h  SCL_DataTypeTemplates-pskel.cc  SCL_DataTypeTemplates-pskel.h  SCL_DataTypeTemplates.cc  SCL_DataTypeTemplates.h  SCL_Enums-pskel.cc  SCL_Enums-pskel.h  SCL_Enums.cc  SCL_Enums.h  SCL_IED-pskel.cc  SCL_IED-pskel.h  SCL_IED.cc  SCL_IED.h  SCL_Substation-pskel.cc  SCL_Substation-pskel.h  SCL_Substation.cc  SCL_Substation.h  open-scl-object.cc  open-scl-object.h
(+203 files in other folders)
