
lib_LTLIBRARIES = \
	libopenscl.la

libopenscl_la_SOURCES = \
	Makefile.am    \
	SCL_BaseSimpleTypes-pskel.cc    \
	SCL_BaseSimpleTypes-pskel.h    \
	SCL_BaseTypes-pskel.cc    \
	SCL_BaseTypes-pskel.h    \
	SCL_Communication-pskel.cc    \
	SCL_Communication-pskel.h    \
	SCL_DataTypeTemplates-pskel.cc    \
	SCL_DataTypeTemplates-pskel.h    \
	SCL_Enums-pskel.cc    \
	SCL_Enums-pskel.h    \
	SCL_IED-pskel.cc    \
	SCL_IED-pskel.h    \
	SCL-pskel.cc    \
	SCL-pskel.h    \
	SCL_Substation-pskel.cc    \
	SCL_Substation-pskel.h    \
	SCL_BaseSimpleTypes.cc    \
	SCL_BaseSimpleTypes.h    \
	SCL_BaseTypes.cc    \
	SCL_BaseTypes.h    \
	SCL_Communication.cc    \
	SCL_Communication.h    \
	SCL_DataTypeTemplates.cc    \
	SCL_DataTypeTemplates.h    \
	SCL_Enums.cc    \
	SCL_Enums.h    \
	SCL_IED.cc    \
	SCL_IED.h    \
	SCL_Substation.cc    \
	SCL_Substation.h    \
	SCL.cc    \
	SCL.h    \
	open-scl-object.h    \
	open-scl-object.cc

## File created by the gnome-build tools

